[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/vibetools/**"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.envs.default.scripts]
lint = "darglint ./src && ruff check --fix ./src && black --check ./src"
format = "ruff check --fix ./src && black ./src"
test = "pytest ./tests"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[project]
name = "vibetools"
version = "0.1.0"
authors = [
  { name="tjtanjin", email="cjtanjin@gmail.com" },
  { name="konglyyy", email="kongleyi99@gmail.com" },
]
description = "Core modules shared across vibe-engineers libraries."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vibe-engineers/vibetools"
Issues = "https://github.com/vibe-engineers/vibetools/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build", "dist", ".venv"]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
ignore = ["D200", "D203", "D205", "D212"]
fixable = ["ALL"]

[tool.darglint]
docstring_style = "google"
strictness = "long"

[tool.black]
line-length = 120
target-version = ['py311']